Bug #25587 Partioning doesnt handle non-aligned/not-32bit fields correctly
Submitted: 12 Jan 2007 15:22 Modified: 25 Jan 2007 6:27
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:
Tags: 5.1

[12 Jan 2007 15:22] Jonas Oreland
Description:
CREATE TABLE t1 (
a tinyint unsigned NOT NULL,
b bigint(20) unsigned NOT NULL,
c char(12),
PRIMARY KEY (a,b)
) ENGINE ndb DEFAULT CHARSET=latin1 PARTITION BY KEY (a);

How to repeat:
 

Suggested fix:
[12 Jan 2007 15:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/18027

ChangeSet@1.2365, 2007-01-12 15:48:47+01:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#25587
    fix not aligned or non 32-bit values in "smart" scan
[16 Jan 2007 15:06] Jonas Oreland
pushed to 5.1-ndb
[24 Jan 2007 3:08] Tomas Ulin
pushed to 5.1.15
[24 Jan 2007 18:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/18733

ChangeSet@1.2095, 2007-01-24 18:26:42+01:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#25587
    Fix unaligned or non-32-bit values in "smart scan"
    (mysql-5.1-wl2325-5.0)
[25 Jan 2007 6:27] Jon Stephens
Thank you for your bug report. This issue has already been fixed in the latest released
version of that product, which you can download at

  http://www.mysql.com/downloads/

Documented bugfix in 5.1.15 changelog.