ndb - bug#25587   fix not aligned or non 32-bit values in "smart" scan